--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "mysql2": "^3.10.1",
     "next": "14.2.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-tabs": "^6.0.2"
   },
   "devDependencies": {
     "eslint": "^8",
