--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "fabric": "^5.3.0",
     "mysql2": "^3.10.1",
     "next": "14.2.4",
     "react": "^18",
